Updated contact and work experience links

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     <table>
       <tr>
         <td>
-          <a href=" /Users/mikaylafretwell/Documents/Web Development/HTML - Personal Site/workexperience.html">Work Experience</a>
+          <a href="workexperience.html">Work Experience</a>
         </td>
       </tr>
     </table>
     <tr>
       <td>
-        <a href="/Users/mikaylafretwell/Documents/Web Development/HTML - Personal Site/contact.html">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
       </td>
     </tr>
   </body>
